<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation= "horizontal"
    android:weightSum="1"
    android:background="#fffd0d0d"
    android:showDividers="none">

    <Button
        android:layout_width="289dp"
        android:layout_height="202dp"
        android:text="@string/scoring_platform_1"
        android:id="@+id/button"
        android:layout_marginTop="121dp"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/button2"
        android:layout_gravity="top"
        android:layout_weight="-0.5"
        android:background="#fde9e6e6"
        android:clickable="true"
        android:elegantTextHeight="false"
        android:singleLine="false"/>
        //android:onClick="scoringPlatformOne"/>

    <Button
        android:layout_width="110dp"
        android:layout_height="202dp"
        android:text="@string/plain_side_hp"
        android:id="@+id/button6"
        android:layout_below="@+id/button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:layout_marginLeft="-130dp"
        android:layout_marginBottom="-65dp"
        android:layout_gravity="bottom"
        android:background="#ff0aff17"
        android:onClick=""/>

    <Button
        android:layout_width="110dp"
        android:layout_height="202dp"
        android:text="@string/ramp_side_hp"
        android:id="@+id/button5"
        android:layout_below="@+id/button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:layout_gravity="bottom|left"
        android:layout_marginLeft="-230dp"
        android:layout_marginBottom="-65dp"
        android:background="#ff1bff16"
        android:onClick=""/>

    <Button
        android:layout_width="289dp"
        android:layout_height="202dp"
        android:text="@string/human_player"
        android:id="@+id/button3"
        android:layout_below="@+id/button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:layout_gravity="bottom|left"
        android:layout_marginLeft="-150dp"
        android:layout_marginBottom="145dp"
        android:background="#ff0fff15"
        android:onClick="humanPlayer"/>

    <Button
        android:layout_width="290dp"
        android:layout_height="202dp"
        android:text="@string/scoring_platform_2"
        android:id="@+id/button2"
        android:layout_marginTop="121dp"
        android:layout_below="@+id/button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:layout_gravity="top"
        android:layout_marginLeft="19dp"
        android:background="#fde9e6e6"/>
        //android:onClick="scoringPlatformTwo"/>

    <Button
        android:layout_width="110dp"
        android:layout_height="202dp"
        android:text="@string/plain_side_landfill"
        android:id="@+id/button8"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:layout_marginLeft="-130dp"
        android:layout_marginBottom="-65dp"
        android:layout_weight="-0.5"
        android:layout_gravity="bottom"
        android:background="#ff3bff1b"
        android:onClick=""/>

    <Button
        android:layout_width="110dp"
        android:layout_height="202dp"
        android:text="@string/ramp_side_landfill"
        android:id="@+id/button7"
        android:layout_below="@+id/button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:layout_marginLeft="-230dp"
        android:layout_marginBottom="-65dp"
        android:layout_weight="-0.5"
        android:layout_gravity="bottom"
        android:background="#ff23ff24"
        android:onClick=""/>

    <Button
        android:layout_width="289dp"
        android:layout_height="202dp"
        android:text="@string/landfill"
        android:id="@+id/button4"
        android:layout_below="@+id/button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:layout_gravity="bottom|right"
        android:layout_marginLeft="-145dp"
        android:layout_marginBottom="145dp"
        android:layout_marginRight="102dp"
        android:background="#ff0aff2d"
        android:onClick=""/>

</LinearLayout>
